public/stylesheets/style.css
@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap");

:root {
  --mainbg-color: #efeae2;
  --body-bg: white;
  --header-bg: rgb(240, 242, 245);
  --footer-bg: #f0f2f5;
  --icon: #54656f;
  --message-primary: #111b21;
}

body {
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
  background-color: rgba(0, 0, 0, 0.85);
}

.header {
  padding: 10px 16px;
  background-color: var(--header-bg);
  font-weight: 400;
}

.top {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  justify-content: space-between;
}

.input-wrapper {
  display: grid;
  margin-bottom: 1rem;
}

label {
  margin-bottom: 0.5rem;
}

input,
textarea {
  padding: 5px 8px;
}

h1 {
  color: rgb(0, 173, 0);
  font-size: 3rem;
  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.75);
  text-align: center;
  font-family: "Rubik", sans-serif;
}

input {
  max-width: 50%;
  width: 20rem;
}

.smiley,
.plus {
  width: 30px;
  height: 30px;
}

ul li {
  list-style-type: none;
}

a {
  color: #f0f0f0;
  text-decoration: none;
  border-radius: 7.5px;
  padding: 8px 10px;
  background-color: green;
}

a:hover {
  background-color: rgb(0, 85, 0);
  color: white;
}

.screen-wrapper {
  display: flex;
  flex-direction: column;
  height: 500px;
  overflow-y: scroll;
  background: var(--mainbg-color) url(/images/whatsappBg.png);
}

.wrapper {
  width: 70vw;
  min-width: 300px;
  margin: 0 auto;
  border-radius: 8px;
  outline: 8px double green;
}

footer {
  background-color: var(--footer-bg);
  padding: 1rem 1.1rem;
  gap: 0.3rem;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-top: auto;
}

/* Message Box Styles */

.row-wrapper {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding-right: 57px;
  padding-left: 40px;
  margin-bottom: 12px;
}

@media screen and (max-width: 480px) {
  ul {
    padding: 0;
  }
  .row-wrapper {
    padding-left: 15px;
  }
}

@media screen and (max-width: 840px) {
  ul {
    padding: 0;
  }
  .row-wrapper {
    padding-left: 25px;
  }
}

.message {
  position: relative;
  flex: none;
  font-size: 14.2px;
  line-height: 19px;
  margin-bottom: 0;
  color: var(--message-primary);
  border-radius: 7.5px;
}

@media screen and (min-width: 1301px) {
  .message {
    max-width: 65%;
  }
}

.message--content {
  border-top-left-radius: 0;
  background-color: white;
  border-radius: 7.5px;
  box-shadow: 0 1px 0.5px rgba(11, 20, 26, 0.13);
}

.content--padding {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 9px;
  padding-bottom: 8px;
  padding-top: 6px;
}

/* Message Content Styles */
.top-content {
  display: inline-flex;
  max-width: 100%;
  font-size: 12.8px;
  line-height: 22px;
  font-weight: 500;
  color: #53bdeb;
}

.author--name {
  padding-right: 4px;
  display: block;
  min-width: 8ch;
  flex: 1;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.author--name ::before {
  content: "~ ";
  display: block;
  white-space: nowrap;
}

.content--text--wrapper {
  position: relative;
  overflow-wrap: anywhere;
  white-space: pre-wrap;
}

.next-line {
  display: inline-flex;
  visibility: hidden;
  vertical-align: middle;
  font-size: 0.6875rem;
  padding-bottom: 0;
  padding-left: 4px;
  padding-right: 4px;
}

.date {
  float: right;
  position: relative;
  margin-right: 0;
  margin-left: 4px;
  margin-top: -10px;
  margin-bottom: -5px;
  color: #8d8b8b;
  font-size: 12px;
}

